--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^11.1.1",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-device-info": "^10.12.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
